Return account balance from POST /reg
